[gd_scene load_steps=6 format=3 uid="uid://cr24dbe0olyc1"]

[ext_resource type="Theme" uid="uid://d4hlbbr5l8hoa" path="res://Assets/theme/main.tres" id="1_8gbba"]
[ext_resource type="Script" uid="uid://tx13wbiq8yx4" path="res://Scripts/animatedButton.gd" id="1_bo1nx"]
[ext_resource type="Script" uid="uid://dsegvrxon5ob0" path="res://Scripts/animatedCheckbox.gd" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://d1y4kke22x8ja" path="res://Scripts/main.gd" id="1_kry3j"]
[ext_resource type="Script" uid="uid://cdru6uxof613x" path="res://Scripts/appearAnimation.gd" id="4_jjvhh"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_kry3j")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8gbba")

[node name="VSplitContainer" type="VSplitContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
dragging_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="Control/VSplitContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VSplitContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VSplitContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OpenFolder" type="Button" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Open Folder"
script = ExtResource("1_bo1nx")
metadata/_custom_type_script = "uid://tx13wbiq8yx4"

[node name="openLastFolder" type="Button" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Open Last Folder"
script = ExtResource("1_bo1nx")
metadata/_custom_type_script = "uid://tx13wbiq8yx4"

[node name="clearCache" type="Button" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Clear Cache"
script = ExtResource("1_bo1nx")
metadata/_custom_type_script = "uid://tx13wbiq8yx4"

[node name="checkAllFiles" type="Button" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Check All Files"
script = ExtResource("1_bo1nx")
metadata/_custom_type_script = "uid://tx13wbiq8yx4"

[node name="showFileNames" type="CheckBox" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Show Files Names"
script = ExtResource("1_jjgbg")
metadata/_custom_type_script = "uid://dsegvrxon5ob0"

[node name="SpinBox" type="SpinBox" parent="Control/VSplitContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
alignment = 1
update_on_text_changed = true

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VSplitContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridGallery" type="GridContainer" parent="Control/VSplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 2.0
columns = 5

[node name="appearAnimation" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_jjvhh")
metadata/_custom_type_script = "uid://cdru6uxof613x"
